# StatMerge-v1.0.0

./: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMTAS_v1_0.py  LICENSE  README.md  StatMerge_v1.0.0.py  __init__.py  agreement.py  app.py  ci.yml  cli.py  datalab.py  effects.py  emtas.py  paper.bib  paper.md  pyproject.toml  quickstart.py  run_gui.py  statilytics.py  test_agreement.py  test_effects.py  test_imports.py
